--- a/www/index.html
+++ b/www/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html lang="zh-Hanl-CN">
+<html lang="zh-Hans-CN">
   <head>
     <meta charset="UTF-8" />
     <title>Nest Blog</title>
-    <link rel="icon" type="image/png" href="./logo.png" />
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/main/index.ts"></script>
   </body>
 </html>
