--- a/www/index.html
+++ b/www/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html lang="zh-Hans-CN">
+<html lang="en">
   <head>
-    <meta charset="UTF-8"/>
-    <title>Nest Blog</title>
-    <link rel="icon" type="image/svg" href="/vite.svg"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + Vue + TS</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main/index.ts"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
